--- a/index.html
+++ b/index.html
@@ -16,6 +16,108 @@
     <link rel="stylesheet" href="./styles/all.css" />
   </head>
   <body>
+    <section class="min-vh-100 position-relative">
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
+        alt="ball01"
+        class="position-absolute top-100 start-0 translate-middle d-none d-lg-block"
+      />
+      <img
+      src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home.svg"
+      alt=bg_home"" class="position-absolute top-0 end-0 z--1 vh-100 d-none
+      d-lg-block" />
+      <div class="container">
+        <nav
+          class="navbar mb-4 border-bottom border-bottom-lg-0 border-secondary"
+        >
+          <a href="#">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
+              alt="chatTalker"
+              class="img-fluid logo"
+            />
+          </a>
+
+          <a class="btn btn-third rounded-pill link-light px-4 py-2" href="#"
+            >方案費用</a
+          >
+        </nav>
+
+        <header class="row row-cols-1 row-cols-lg-2 align-items-center">
+          <div class="col">
+            <h1 class="h5 text-primary fw-bold">
+              ChatTalker 最全面的聊天機器人
+            </h1>
+            <h3 class="display-5 fw-bold lh-base">你愛我像誰？</h3>
+            <h3 class="display-5 fw-bold lh-base mb-3">扮演什麼角色我都會</h3>
+            <h2 class="h5">Facebook、Instagram、LINE 聊天機器人解決方案</h2>
+          </div>
+          <div class="col">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home.svg"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </header>
+      </div>
+    </section>
+
+    <section class="min-vh-100 position-relative bg-danger">
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
+        alt="ball01"
+        class="position-absolute top-100 start-0 translate-middle z--1"
+      />
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home.svg"
+        alt="bg_home"
+        class="position-absolute top-0 end-0"
+      />
+      <div class="container">
+        <nav class="navbar mb-4">
+          <a href="#">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
+              alt="chatTalker"
+              class="img-fluid"
+            />
+          </a>
+
+          <a
+            class="btn btn-third rounded-pill link-light px-4 py-2 top-0"
+            href="#"
+            >方案費用</a
+          >
+        </nav>
+
+        <header class="row align-items-center">
+          <div class="col">
+            <h1 class="h5 text-primary fw-bold">
+              ChatTalker 最全面的聊天機器人
+            </h1>
+            <h3 class="display-5 fw-bold lh-base">你愛我像誰？</h3>
+            <h3 class="display-5 fw-bold lh-base mb-3">扮演什麼角色我都會</h3>
+            <h2 class="h5">Facebook、Instagram、LINE 聊天機器人解決方案</h2>
+          </div>
+          <div class="col">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home.svg"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </header>
+      </div>
+    </section>
+
+    <a
+      href="#"
+      class="btn btn-primary rounded-circle link-light position-fixed toTopBtn bottom-10 end-10 fs-4 fw-bold toTopBtn d-flex justify-content-center align-items-center"
+    >
+      TOP
+    </a>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
