--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles/all.css" />
   </head>
   <body>
-    <section class="min-vh-100 position-relative">
+    <section class="min-vh-100 position-relative pb-5 pb-lg-7">
       <!-- 導覽列 -->
       <div class="container">
         <nav class="navbar py-3 py-lg-4">
@@ -25,7 +25,7 @@
             <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
               alt="chatTalker"
-              class="img-fluid logo"
+              class="logo"
             />
           </a>
 
@@ -81,51 +81,138 @@
       d-lg-block" />
     </section>
 
-    <section class="min-vh-100 position-relative bg-danger">
-      <img
-        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
-        alt="ball01"
-        class="position-absolute top-100 start-0 translate-middle z--1"
-      />
-      <img
-        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home.svg"
-        alt="bg_home"
-        class="position-absolute top-0 end-0"
-      />
+    <section class="py-5 py-lg-7">
+      <div class="container position-relative">
+        <h2 class="text-center fw-bold mb-5 mb-lg-7">三大平台，我來搞定</h2>
+
+        <div
+          class="row row-cols-1 row-cols-lg-3 justify-content-center text-center gy-4 gy-lg-0"
+        >
+          <!-- FB -->
+          <div class="col">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/messenger.svg"
+              alt="messenger"
+              class="socialMediaIMG mb-3 mb-lg-4"
+            />
+            <h3 class="h4 fw-bold mb-3 mb-lg-4">Facebook Messenger</h3>
+            <h4 class="h6 text-muted lh-base mb-0">
+              結合粉絲專頁，提高粉絲互動率<br />
+              有效經營品牌社群
+            </h4>
+          </div>
+
+          <!-- LINE -->
+          <div class="col">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/line.svg"
+              alt="messenger"
+              class="socialMediaIMG mb-3 mb-lg-4"
+            />
+            <h3 class="h4 fw-bold mb-3 mb-lg-4">LINE 官方帳號</h3>
+            <h4 class="h6 text-muted lh-base mb-0">
+              融入日常生活，精準傳遞品牌資訊<br />
+              打造個人化專屬服務
+            </h4>
+          </div>
+
+          <!-- IG -->
+          <div class="col">
+            <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/instagram.svg"
+              alt="messenger"
+              class="socialMediaIMG mb-3 mb-lg-4"
+            />
+            <h3 class="h4 fw-bold mb-3 mb-lg-4">Instagram 商業帳號</h3>
+            <h4 class="h6 text-muted lh-base mb-0">
+              貼近粉絲，提升品牌自然聲量<br />
+              行銷、抽獎一站完成
+            </h4>
+          </div>
+        </div>
+
+        <!-- 背景圓形 -->
+        <img
+          src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
+          alt="ball01"
+          class="position-absolute top-0 start-0 translate-middle-x d-block d-lg-none w-25"
+        />
+      </div>
+    </section>
+
+    <section class="py-5 py-lg-7">
       <div class="container">
-        <nav class="navbar mb-4">
-          <a href="#">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/logo.png"
-              alt="chatTalker"
-              class="img-fluid"
-            />
-          </a>
+        <h2 class="fw-bold text-center mb-3">任何的角色，我都能給</h2>
+        <h3 class="h5 text-center mb-5 mb-lg-7">
+          量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策
+        </h3>
 
-          <a
-            class="btn btn-third rounded-pill link-light px-4 py-2 top-0"
-            href="#"
-            >方案費用</a
-          >
-        </nav>
+        <div
+          class="row row-cols-lg-4 gx-lg-3 gy-4 gy-lg-0 justify-content-center"
+        >
+          <!-- 活動主 -->
+          <div class="col-9">
+            <div class="card text-center rounded-4 mx-auto shadow-sm">
+              <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch01.svg"
+              class="card-img-top rounded-top-4 " alt="活動主"' />
+              <div class="card-body">
+                <h4 class="card-title h6 text-primary fw-bold mb-3">活動主</h4>
+                <h3 class="card-text h6 lh-base mb-2">
+                  用戶數位足跡掌握在手<br />
+                  精準取得客戶輪廓，提供分析
+                </h3>
+              </div>
+            </div>
+          </div>
 
-        <header class="row align-items-center">
-          <div class="col">
-            <h1 class="h5 text-primary fw-bold">
-              ChatTalker 最全面的聊天機器人
-            </h1>
-            <h3 class="display-5 fw-bold lh-base">你愛我像誰？</h3>
-            <h3 class="display-5 fw-bold lh-base mb-3">扮演什麼角色我都會</h3>
-            <h2 class="h5">Facebook、Instagram、LINE 聊天機器人解決方案</h2>
+          <!-- 創作者 -->
+          <div class="col-9">
+            <div class="card text-center rounded-4 mx-auto shadow-sm">
+              <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch02.svg"
+              class="card-img-top rounded-top-4 " alt="創作者"' />
+              <div class="card-body">
+                <h4 class="card-title h6 text-primary fw-bold mb-3">創作者</h4>
+                <h3 class="card-text h6 lh-base mb-2">
+                  自由設計互動腳本<br />
+                  輕鬆整合各項數據
+                </h3>
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home.svg"
-              alt=""
-              class="img-fluid"
-            />
+
+          <!-- 企業品牌 -->
+          <div class="col-9">
+            <div class="card text-center rounded-4 mx-auto shadow-sm">
+              <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch03.svg"
+              class="card-img-top rounded-top-4 " alt="企業品牌"' />
+              <div class="card-body">
+                <h4 class="card-title h6 text-primary fw-bold mb-3">
+                  企業品牌
+                </h4>
+                <h3 class="card-text h6 lh-base mb-2">
+                  多元資料整合，做出服務差異化<br />
+                  幫助企業加速決策
+                </h3>
+              </div>
+            </div>
           </div>
-        </header>
+
+          <!-- 其他 -->
+          <div class="col-9">
+            <div class="card text-center rounded-4 mx-auto shadow-sm">
+              <img
+              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch04.svg"
+              class="card-img-top rounded-top-4 " alt="其他"' />
+              <div class="card-body">
+                <h4 class="card-title h6 text-primary fw-bold mb-3">其他</h4>
+                <h3 class="card-text h6 lh-base mb-2">創造更多可能...</h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
