fix: 修正卡片不等高

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         >
           <!-- 活動主 -->
           <div class="col-9">
-            <div class="card text-center rounded-4 mx-auto shadow-sm">
+            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch01.svg"
               class="card-img-top rounded-top-4 " alt="活動主"' />
@@ -168,7 +168,7 @@
 
           <!-- 創作者 -->
           <div class="col-9">
-            <div class="card text-center rounded-4 mx-auto shadow-sm">
+            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch02.svg"
               class="card-img-top rounded-top-4 " alt="創作者"' />
@@ -184,7 +184,7 @@
 
           <!-- 企業品牌 -->
           <div class="col-9">
-            <div class="card text-center rounded-4 mx-auto shadow-sm">
+            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch03.svg"
               class="card-img-top rounded-top-4 " alt="企業品牌"' />
@@ -202,7 +202,7 @@
 
           <!-- 其他 -->
           <div class="col-9">
-            <div class="card text-center rounded-4 mx-auto shadow-sm">
+            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch04.svg"
               class="card-img-top rounded-top-4 " alt="其他"' />
