feat: 完成 "快速了解客戶輪廓" 區域

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </a>
 
           <!-- 按鈕 -->
-          <a class="btn btn-third rounded-pill link-light px-4 py-2" href="#"
+          <a class="btn btn-third rounded-pill link-light px-5 py-2" href="#"
             >方案費用</a
           >
         </nav>
@@ -97,9 +97,9 @@
             />
             <h3 class="h4 fw-bold mb-3 mb-lg-4">Facebook Messenger</h3>
             <h4 class="h6 text-muted lh-base mb-0">
-              結合粉絲專頁，提高粉絲互動率<br />
-              有效經營品牌社群
+              結合粉絲專頁，提高粉絲互動率
             </h4>
+            <h4 class="h6 text-muted lh-base mb-0">有效經營品牌社群</h4>
           </div>
 
           <!-- LINE -->
@@ -111,9 +111,9 @@
             />
             <h3 class="h4 fw-bold mb-3 mb-lg-4">LINE 官方帳號</h3>
             <h4 class="h6 text-muted lh-base mb-0">
-              融入日常生活，精準傳遞品牌資訊<br />
-              打造個人化專屬服務
+              融入日常生活，精準傳遞品牌資訊
             </h4>
+            <h4 class="h6 text-muted lh-base mb-0">打造個人化專屬服務</h4>
           </div>
 
           <!-- IG -->
@@ -125,9 +125,9 @@
             />
             <h3 class="h4 fw-bold mb-3 mb-lg-4">Instagram 商業帳號</h3>
             <h4 class="h6 text-muted lh-base mb-0">
-              貼近粉絲，提升品牌自然聲量<br />
-              行銷、抽獎一站完成
+              貼近粉絲，提升品牌自然聲量
             </h4>
+            <h4 class="h6 text-muted lh-base mb-0">行銷、抽獎一站完成</h4>
           </div>
         </div>
 
@@ -140,7 +140,7 @@
       </div>
     </section>
 
-    <section class="py-5 py-lg-7">
+    <section class="py-5 py-lg-7 position-relative overflow-hidden">
       <div class="container">
         <h2 class="fw-bold text-center mb-3">任何的角色，我都能給</h2>
         <h3 class="h5 text-center mb-5 mb-lg-7">
@@ -152,14 +152,16 @@
         >
           <!-- 活動主 -->
           <div class="col-9">
-            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
+            <div
+              class="card h-100 text-center rounded-4 mx-auto shadow border-0"
+            >
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch01.svg"
               class="card-img-top rounded-top-4 " alt="活動主"' />
               <div class="card-body">
                 <h4 class="card-title h6 text-primary fw-bold mb-3">活動主</h4>
+                <h3 class="card-text h6 lh-base mb-0">用戶數位足跡掌握在手</h3>
                 <h3 class="card-text h6 lh-base mb-2">
-                  用戶數位足跡掌握在手<br />
                   精準取得客戶輪廓，提供分析
                 </h3>
               </div>
@@ -168,23 +170,25 @@
 
           <!-- 創作者 -->
           <div class="col-9">
-            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
+            <div
+              class="card h-100 text-center rounded-4 mx-auto shadow border-0"
+            >
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch02.svg"
               class="card-img-top rounded-top-4 " alt="創作者"' />
               <div class="card-body">
                 <h4 class="card-title h6 text-primary fw-bold mb-3">創作者</h4>
-                <h3 class="card-text h6 lh-base mb-2">
-                  自由設計互動腳本<br />
-                  輕鬆整合各項數據
-                </h3>
+                <h3 class="card-text h6 lh-base mb-0">自由設計互動腳本</h3>
+                <h3 class="card-text h6 lh-base mb-2">輕鬆整合各項數據</h3>
               </div>
             </div>
           </div>
 
           <!-- 企業品牌 -->
           <div class="col-9">
-            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
+            <div
+              class="card h-100 text-center rounded-4 mx-auto shadow border-0"
+            >
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch03.svg"
               class="card-img-top rounded-top-4 " alt="企業品牌"' />
@@ -192,17 +196,19 @@
                 <h4 class="card-title h6 text-primary fw-bold mb-3">
                   企業品牌
                 </h4>
-                <h3 class="card-text h6 lh-base mb-2">
-                  多元資料整合，做出服務差異化<br />
-                  幫助企業加速決策
+                <h3 class="card-text h6 lh-base mb-0">
+                  多元資料整合，做出服務差異化
                 </h3>
+                <h3 class="card-text h6 lh-base mb-2">幫助企業加速決策</h3>
               </div>
             </div>
           </div>
 
           <!-- 其他 -->
           <div class="col-9">
-            <div class="card h-100 text-center rounded-4 mx-auto shadow-sm">
+            <div
+              class="card h-100 text-center rounded-4 mx-auto shadow border-0"
+            >
               <img
               src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ch04.svg"
               class="card-img-top rounded-top-4 " alt="其他"' />
@@ -214,6 +220,131 @@
           </div>
         </div>
       </div>
+
+      <!-- 背景圓形 -->
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
+        alt="ball01"
+        class="position-absolute top-100 start-100 translate-middle d-none d-lg-block w-25 opacity-50 z--1"
+      />
+    </section>
+
+    <section class="py-5 py-lg-7 position-relative overflow-hidden">
+      <div class="container">
+        <div
+          class="row flex-column flex-lg-row-reverse justify-content-between align-items-center"
+        >
+          <!-- 文字區 -->
+          <div class="col-lg-4 mx-auto text-center text-lg-start">
+            <h2 class="fw-bold lh-base mb-0">快速了解客戶輪廓</h2>
+            <h2 class="fw-bold lh-base mb-3">建立品牌流量池</h2>
+            <h3 class="h6 lh-base mb-0">深入用戶日常，成為用戶貼身好友</h3>
+            <h3 class="h6 lh-base mb-0">
+              精準傳遞品牌資訊，打造個人化專屬服務
+            </h3>
+            <h3 class="h6 lh-base mb-3 mb-lg-4">
+              不知不覺深入用戶生活，成為用戶貼心的好朋朋:D
+            </h3>
+            <a
+              class="btn btn-primary rounded-pill link-light px-5 py-2 mb-5"
+              href="#"
+              >方案費用</a
+            >
+          </div>
+
+          <!-- 卡片區 -->
+          <div class="col-lg-6">
+            <div class="row gx-lg-7 gy-4 justify-content-center">
+              <!-- 無敵轉換術 -->
+              <div class="col-8 col-lg-6 order-first">
+                <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
+                  <div
+                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                  >
+                    <img
+                    src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon01.svg"
+                    class="w-100" alt="無敵轉換術"' />
+                  </div>
+
+                  <div class="card-body p-0">
+                    <h4 class="card-title h5 fw-bold mb-3">無敵轉換術</h4>
+                    <h3 class="card-text h6 lh-base mb-0">精準掌握客群來源</h3>
+                    <h3 class="card-text h6 lh-base mb-4">分析用戶轉化流程</h3>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 聊天機器人 -->
+              <div class="col-8 col-lg-6 order-1">
+                <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
+                  <div
+                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                  >
+                    <img
+                    src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon02.svg"
+                    class="w-100 " alt="聊天機器人"' />
+                  </div>
+
+                  <div class="card-body p-0">
+                    <h4 class="card-title h5 fw-bold mb-3">聊天機器人</h4>
+                    <h3 class="card-text h6 lh-base mb-0">
+                      66款聊天機器人模組
+                    </h3>
+                    <h3 class="card-text h6 lh-base mb-4">自由設計聊天流程</h3>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 一站式訊息中心 -->
+              <div class="col-8 col-lg-6 order-0 order-lg-1">
+                <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
+                  <div
+                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                  >
+                    <img
+                    src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon03.svg"
+                    class="w-100 " alt="一站式訊息中心"' />
+                  </div>
+
+                  <div class="card-body p-0">
+                    <h4 class="card-title h5 fw-bold mb-3">一站式訊息中心</h4>
+                    <h3 class="card-text h6 lh-base mb-0">
+                      整合Messenger、LINE
+                    </h3>
+                    <h3 class="card-text h6 lh-base mb-4">和IG三大平台訊息</h3>
+                  </div>
+                </div>
+              </div>
+
+              <!-- 群發訊息 -->
+              <div class="col-8 col-lg-6 order-last">
+                <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
+                  <div
+                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                  >
+                    <img
+                    src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon04.svg"
+                    class="w-100 " alt="群發訊息"' />
+                  </div>
+
+                  <div class="card-body p-0">
+                    <h4 class="card-title h5 fw-bold mb-3">群發訊息</h4>
+                    <h3 class="card-text h6 lh-base mb-0">自由選定特定受眾</h3>
+                    <h3 class="card-text h6 lh-base mb-4">精準推送群發訊息</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 背景圓形 -->
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
+        alt="ball01"
+        class="position-absolute top-0 start-100 translate-middle d-none d-lg-block w-25 opacity-50 z--1"
+      />
     </section>
 
     <!-- 回到上方按鈕 -->
