feat: 完成 footer

--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,41 @@
       />
     </section>
 
+    <!-- 美好用戶體驗 -->
+    <section class="pt-5 pt-lg-7 mb-9 mb-lg-13 position-relative">
+      <!-- 桌機板 底圖 -->
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home_footer.svg"
+        alt="home footer"
+        class="w-100 d-none d-lg-block"
+      />
+
+      <!-- 手機板 底圖 -->
+      <img
+        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/footer_sm.svg"
+        alt="home footer"
+        class="w-100 d-lg-none d-block"
+      />
+
+      <div
+        class="position-static position-lg-absolute start-50 translate-middle-lg-x footer__title"
+      >
+        <h2 class="mb-4 mb-lg-7 text-center fw-bold">
+          \ 美好用戶體驗，從對話開始 /
+        </h2>
+
+        <div class="text-center">
+          <a class="btn btn-primary rounded-pill link-light px-5 py-2" href="#"
+            >方案費用</a
+          >
+        </div>
+      </div>
+    </section>
+
+    <footer class="w-100 py-3 bg-lightgray text-center">
+      © 2022 chatTalker. All Rights Reserved.
+    </footer>
+
     <!-- 回到上方按鈕 -->
     <a
       href="#"
