feat: 完成 "計費方式說明" header

--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chatTalker ｜ 首頁</title>
+    <title>chatTalker ｜ 計費方式</title>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +21,7 @@
     <!-- 導覽列 + header -->
     <section class="min-vh-100 position-relative pb-5 pb-lg-7">
       <!-- 導覽列 -->
-      <div class="container">
+      <div class="container bg-lightgray">
         <nav class="navbar py-3 py-lg-4">
           <!-- Logo -->
           <a href="#">
@@ -40,48 +40,32 @@
       </div>
 
       <!-- 手機板 - 導覽列下方邊線 -->
-      <div class="border border-lg-0 border-secondary mb-5"></div>
+      <div class="border border-lg-0 border-secondary mb-7 mb-lg-13"></div>
 
       <!-- header -->
       <div class="container">
-        <header class="row row-cols-1 row-cols-lg-2 align-items-center">
-          <!-- header 文字 -->
-          <div class="col">
-            <h1 class="h5 text-primary fw-bold">
-              ChatTalker 最全面的聊天機器人
-            </h1>
-            <h3 class="display-5 fw-bold lh-base mb-0">你愛我像誰？</h3>
-            <h3 class="display-5 fw-bold lh-base mb-3">扮演什麼角色我都會</h3>
-            <h2 class="h5">Facebook、Instagram、LINE 聊天機器人解決方案</h2>
-          </div>
-
-          <!-- header 圖片 -->
-          <div class="col position-relative">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/home.svg"
-              alt="header img"
-              class="img-fluid"
-            />
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home_sm.svg"
-              alt="header img"
-              class="img-fluid d-lg-none position-absolute bottom-0 start-50 translate-middle-x z--1"
-            />
-          </div>
+        <header>
+          <h1 class="fw-bold display-5 lh-base mb-3">計費方式說明</h1>
+          <h2 class="h6 lh-base">聊天機器人幫你實現增粉、轉單、客服等目標</h2>
         </header>
       </div>
 
-      <!-- 背景圓形 -->
+      <!-- 背景灰底 -->
+      <div
+        class="grayBanner bg-lightgray position-absolute start-0 end-0 top-0 bottom-25 bottom-lg-50 z--1"
+      ></div>
+
+      <!-- 桌機板 - 背景圖 -->
       <img
-        src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
-        alt="ball01"
-        class="position-absolute top-100 start-0 translate-middle d-none d-lg-block"
-      />
-      <!-- 背景不規則形 -->
+      src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner.svg"
+      alt=bg_home"" class="position-absolute top-0 end-0 bottom-50 z--1 d-none
+      d-lg-block " />
+
+      <!-- 手機板 - 背景圖 -->
       <img
-      src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/bg_home.svg"
-      alt=bg_home"" class="position-absolute top-0 end-0 z--1 vh-100 d-none
-      d-lg-block" />
+      src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg"
+      alt=bg_home"" class="position-absolute top-0 end-0 bottom-50 z--1 d-block
+      d-lg-none " />
     </section>
 
     <!-- 三大平台，我來搞定 -->
@@ -1346,7 +1330,7 @@
       />
 
       <div
-        class="position-static position-lg-absolute start-50 translate-middle-lg-x top-70"
+        class="position-static position-lg-absolute start-50 translate-middle-lg-x footer__title"
       >
         <h2 class="mb-4 mb-lg-7 text-center fw-bold">
           \ 美好用戶體驗，從對話開始 /
