fix: 修正導覽列背景顏色

--- a/payment.html
+++ b/payment.html
@@ -21,7 +21,7 @@
     <!-- 導覽列 + header -->
     <section class="min-vh-100 position-relative pb-5 pb-lg-7">
       <!-- 導覽列 -->
-      <div class="container bg-lightgray">
+      <div class="container bg-lightgray bg-lg-transparent">
         <nav class="navbar py-3 py-lg-4">
           <!-- Logo -->
           <a href="#">
