--- a/payment.html
+++ b/payment.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- 導覽列 + header -->
-    <section class="min-vh-100 position-relative pb-5 pb-lg-7">
+    <section class=" position-relative pb-5 pb-lg-7">
       <!-- 導覽列 -->
       <div class="container bg-lightgray bg-lg-transparent">
         <nav class="navbar py-3 py-lg-4">
@@ -52,7 +52,7 @@
 
       <!-- 背景灰底 -->
       <div
-        class="grayBanner bg-lightgray position-absolute start-0 end-0 top-0 bottom-25 bottom-lg-50 z--1"
+        class="grayBanner bg-lightgray position-absolute start-0 end-0 top-0 bottom-n100 bottom-lg-n30 z--1"
       ></div>
 
       <!-- 桌機板 - 背景圖 -->
@@ -68,64 +68,9 @@
       d-lg-none " />
     </section>
 
-    <!-- 三大平台，我來搞定 -->
-    <section class="py-5 py-lg-7">
-      <div class="container position-relative">
-        <h2 class="text-center fw-bold mb-5 mb-lg-7">三大平台，我來搞定</h2>
-
-        <ul
-          class="row row-cols-1 row-cols-lg-3 justify-content-center text-center gy-4 gy-lg-0 list-unstyled"
-        >
-          <!-- FB -->
-          <li class="col">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/messenger.svg"
-              alt="messenger"
-              class="socialMediaIMG mb-3 mb-lg-4"
-            />
-            <h3 class="h4 fw-bold mb-3 mb-lg-4">Facebook Messenger</h3>
-            <h4 class="h6 text-muted lh-base mb-0">
-              結合粉絲專頁，提高粉絲互動率
-            </h4>
-            <h4 class="h6 text-muted lh-base mb-0">有效經營品牌社群</h4>
-          </li>
-
-          <!-- LINE -->
-          <li class="col">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/line.svg"
-              alt="messenger"
-              class="socialMediaIMG mb-3 mb-lg-4"
-            />
-            <h3 class="h4 fw-bold mb-3 mb-lg-4">LINE 官方帳號</h3>
-            <h4 class="h6 text-muted lh-base mb-0">
-              融入日常生活，精準傳遞品牌資訊
-            </h4>
-            <h4 class="h6 text-muted lh-base mb-0">打造個人化專屬服務</h4>
-          </li>
-
-          <!-- IG -->
-          <li class="col">
-            <img
-              src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/instagram.svg"
-              alt="messenger"
-              class="socialMediaIMG mb-3 mb-lg-4"
-            />
-            <h3 class="h4 fw-bold mb-3 mb-lg-4">Instagram 商業帳號</h3>
-            <h4 class="h6 text-muted lh-base mb-0">
-              貼近粉絲，提升品牌自然聲量
-            </h4>
-            <h4 class="h6 text-muted lh-base mb-0">行銷、抽獎一站完成</h4>
-          </li>
-        </ul>
-
-        <!-- 背景圓形 -->
-        <img
-          src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/ball01.svg"
-          alt="ball01"
-          class="position-absolute top-0 start-0 translate-middle-x d-block d-lg-none w-25"
-        />
-      </div>
+    <!-- 彈性選擇 -->
+    <section class=>
+      <h3 class="h2 fw-bold text-center">彈性選擇，提供您選擇最適合的方案</h3>
     </section>
 
     <!-- 任何的角色，我都能給 -->
