fix: 修正 "計費方式說明" 高度

--- a/payment.html
+++ b/payment.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- 導覽列 + header -->
-    <section class=" position-relative pb-5 pb-lg-7">
+    <section class=" position-relative paymentIntroduction mb-8 mb-lg-13">
       <!-- 導覽列 -->
       <div class="container bg-lightgray bg-lg-transparent">
         <nav class="navbar py-3 py-lg-4">
@@ -52,19 +52,19 @@
 
       <!-- 背景灰底 -->
       <div
-        class="grayBanner bg-lightgray position-absolute start-0 end-0 top-0 bottom-n100 bottom-lg-n30 z--1"
+        class="grayBanner bg-lightgray position-absolute start-0 end-0 top-0 bottom-0 z--1"
       ></div>
 
       <!-- 桌機板 - 背景圖 -->
       <img
       src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner.svg"
-      alt=bg_home"" class="position-absolute top-0 end-0 bottom-50 z--1 d-none
+      alt=bg_home"" class="position-absolute top-0 end-0 z--1 d-none
       d-lg-block " />
 
       <!-- 手機板 - 背景圖 -->
       <img
       src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/banner_sm.svg"
-      alt=bg_home"" class="position-absolute top-0 end-0 bottom-50 z--1 d-block
+      alt=bg_home"" class="position-absolute  end-0 bottom-0 z--1 d-block
       d-lg-none " />
     </section>
 
