feat: 完成 "彈性選擇" 桌面版

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <li class="col-8 col-lg-6 order-first">
                 <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
                   <div
-                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                    class="w-50 p-3 mb-4 shadow rounded-circle ratio ratio-1x1"
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon01.svg"
@@ -284,7 +284,7 @@
               <li class="col-8 col-lg-6 order-1">
                 <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
                   <div
-                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                    class="w-50 p-3 mb-4 shadow rounded-circle ratio ratio-1x1"
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon02.svg"
@@ -305,7 +305,7 @@
               <li class="col-8 col-lg-6 order-0 order-lg-1">
                 <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
                   <div
-                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                    class="w-50 p-3 mb-4 shadow rounded-circle ratio ratio-1x1"
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon03.svg"
@@ -326,7 +326,7 @@
               <li class="col-8 col-lg-6 order-last">
                 <div class="card h-100 rounded-4 shadow border-0 p-4 p-lg-5">
                   <div
-                    class="w-50 p-3 mb-4 shadow rounded-circle aspect-ratio-1-1"
+                    class="w-50 p-3 mb-4 shadow rounded-circle ratio ratio-1x1"
                   >
                     <img
                     src="https://hexschool.github.io/webLayoutTraining1st/chatTalker_images/icon04.svg"
