fix: 修正 js 載入位置

--- a/payment.html
+++ b/payment.html
@@ -14,8 +14,6 @@
     />
     <!-- css -->
     <link rel="stylesheet" href="./styles/all.css" />
-    <!-- js -->
-    <script src="./src/payment.js" defer></script>
   </head>
   <body>
     <!-- 導覽列 + header -->
@@ -435,5 +433,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <!-- js -->
+    <script src="./src/payment.js"></script>
   </body>
 </html>
