--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     />
     <!-- css -->
     <link rel="stylesheet" href="./styles/all.css" />
-    <!-- js -->
-    <script src="./src/app.js" defer></script>
   </head>
   <body>
     <!-- 導覽列 + header -->
@@ -1382,5 +1380,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <!-- js -->
+    <script src="./src/app.js"></script>
   </body>
 </html>
